--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -20,7 +20,7 @@ header{
     height: 50px;
 
     top: 0;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     z-index: 3;
 }
@@ -94,7 +94,6 @@ body>section{
     background-color: #D9D9D9;
 }
 
-
 body>section:nth-child(2)>nav:nth-child(5){
     position: relative;
     top: 10px;
@@ -120,17 +119,53 @@ body>section:nth-child(3)>section:nth-child(2)>h1{
 body>section:nth-child(3)>section:nth-child(2)>p{
     display: inline-block;
 }
-body>section:nth-child(4){
+
+body>section:nth-child(4)>div{
+    display: flex;
+}
+.rectangle{
+    border: 2px solid black;
+    background-color: #BBADAD;
+    border-radius: 20px;
+}
+
+body>section:nth-child(4)>div:nth-child(2){
+    justify-content: right;
+    margin-right: 50px;
+
+}
+body>section:nth-child(4)>div:nth-child(3){
+    justify-content: center;
+    margin-top: 50px;
+
+}
+body>section:nth-child(4)>div:nth-child(4){
     position: relative;
+    top: 50px;
+    margin-left: 60px;
+    justify-content: start;
+
+}
+body>section:nth-child(4)>div:nth-child(2)>img{
+    border-radius: 20px;
+
+}
+body>section:nth-child(4)>div:nth-child(3)>img{
+    border-radius: 20px;
+    margin-right: 40px;
+}
+body>section:nth-child(4)>div:nth-child(4)>img{
+    border-radius: 20px;
+    margin-right: 40px;
 }
 body>section:nth-child(4)>img:nth-child(1){
-    position: absolute;
-    right: 30vw;
-    top: 135px;
+    margin-bottom: 5vw;
+    padding-left: 42vw;
 }
-body>section:nth-child(4)>section:nth-child(2){
-    display: inline-block;
-}
+
+
+
+
 body>section:nth-child(5){
     position: relative;
 }
