--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -34,6 +34,8 @@ header{
 header>img{
     width: 10%;
     margin: 7px;
+    transition-duration: 2s;
+    transition-property: all;
 }
 
 header>nav>ul>li {
@@ -200,6 +202,38 @@ body>section:nth-child(5)>section:nth-child(2){
     padding-top: 10vh;
 }
 
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(2){
+    height: 40vh;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(3){
+    width: 20vw;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(4){
+    width: 20vw;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(5){
+    margin-bottom: 50px;
+    width: 30vw;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(6){
+    width: 20vw;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(7){
+    margin-bottom: 50px;
+    width: 30vw;
+    border-radius: 20px;
+}
+
+body>section:nth-child(6)>section:nth-child(1){
+    position: relative;
+    right: 0;
+    left: 0;
+    height: 100vh;
+}
+body>section:nth-child(6)>section:nth-child(2)>img:nth-child(1){
+    width: 20vw;
+}
+
 body>section:nth-child(7)>section:nth-child(2)>div{
     display: inline;
     position: relative;
@@ -210,11 +244,9 @@ body>section:nth-child(7)>img:nth-child(1){
     position: relative;
     left: 30vw;
 }
-body>section:nth-child(8)>section:nth-child(3){
 
-}
 body>section:nth-child(8)>section:nth-child(2){
-    background-color: #F3F1EC;
+    background-color: #625D5D;
     display: inline-block;
 }
 
@@ -226,7 +258,7 @@ body>section:nth-child(8)>section:nth-child(3)>form{
     border-radius: 5%;
 }
 body>section:nth-child(8)>section:nth-child(3){
-    background-color: #F3F1EC;
+    background-color: #625D5D;
     display: inline-block;
     border-radius: 5%;
     position: relative;
@@ -239,4 +271,111 @@ body>section:nth-child(8)>section:nth-child(2){
     width: 25vw;
     height: 85vh;
     border-radius: 10%;
+}
+#nav01{
+    margin-left: 30vw;
+}
+.txtfeaild{
+    position: relative;
+    left: 3vw;
+    width: 50vw;
+    height: 70px;
+    border-radius: 20px;
+}
+#textArea{
+    position: relative;
+    left: 3vw;
+    border-radius: 20px;
+    width:50vw ;
+    height: 150px;
+}
+#btnSubmit{
+    position: relative;
+    left: 3vw;
+    width: 10vw;
+    height: 10vh;
+    border-radius: 20px;
+    background-color: #0C1154;
+    color: #aacccc;
+    font-weight: bolder;
+}
+body>section:nth-child(8)>section:nth-child(2)>div{
+    position: relative;
+    left: 3vw;
+}
+body>section:nth-child(8)>section:nth-child(2)>h2:nth-child(1){
+    position: relative;
+    left: 3vw;
+}
+body>section:nth-child(8)>section:nth-child(3)>form>h2{
+    margin-left: 20vw;
+}
+
+footer>nav>ul>li {
+    display: inline;
+    margin-right: 20px;
+}
+footer>nav>ul>li>a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+footer>nav:nth-child(2)>ul{
+    position: absolute;
+    bottom: 5px;
+    right: 40vw;
+
+}
+footer{
+    background-color: #14213D;
+    position: relative;
+    left: 0;
+    right: 0;
+    height: 20vw;
+}
+footer>div:nth-child(4)>small{
+    position: absolute;
+    bottom: 0;
+    left: 30vw;
+    color: whitesmoke;
+}
+.vector{
+    height: 20vh;
+}
+footer>div:nth-child(2){
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+footer>div:nth-child(6){
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#nav01{
+    position: absolute;
+    top: 6vw;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+#nav02{
+    position: absolute;
+    left: 28vw;
+    bottom: 2vw;
+}
+footer>div:nth-child(5){
+    position: absolute;
+    bottom: 0;
+    left: 30vw;
+    color: whitesmoke;
+}
+footer>h2:nth-child(1){
+    color: whitesmoke;
+    font-family:Mandali;
+    font-size: 2vw;
+    font-weight: bold;
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    left: 40vw;
 }
