--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -216,6 +216,13 @@ body>section:nth-child(5)>section:nth-child(2){
     padding-top: 10vh;
 }
 
+#section05{
+    margin-top: -7vw;
+    position: relative;
+    right: 0;
+    left: 0;
+    height: 100vh;
+}
 body>section:nth-child(6)>section:nth-child(2)>img:nth-child(2){
     height: 40vh;
 }
