--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -293,6 +293,9 @@ body>section:nth-child(8)>section:nth-child(2){
     height: 85vh;
     border-radius: 10%;
 }
+#contact{
+    color: #0C1154;
+}
 #nav01{
     margin-left: 30vw;
 }
