--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -189,6 +189,7 @@ body>section:nth-child(5)>section:nth-child(2)>div{
     position: relative;
     right: 0;
     left: 0;
+    margin: auto;
     height: 100vh;
 }
 
@@ -196,28 +197,27 @@ body>section:nth-child(6)>img:nth-child(1){
     position: relative;
     left: 35vw;
     width: 20vw;
+    top: 4vw;
 }
-body>section:nth-child(6)>section:nth-child(2){
-    display: flex;
-    height: 50vh;
-    width: 100vw;
-    justify-content: flex-start;
-}
-body>section:nth-child(6)>section:nth-child(3){
-    display: flex;
-    width: 100vw;
-    height: 50vh;
-    align-items: center;
-    justify-content: flex-start;
 
+#section05>div>img{
+    height: 20vw;
+    filter: grayscale(80%);
+    transition: 0.5s;
 }
-body>section:nth-child(6)>section:nth-child(2)>img{
-    padding-left: 3vw;
-    height: 50vh;
+
+#section05>div>img:hover{
+    filter: grayscale(0%);
+    transition: 0.5s;
 }
-body>section:nth-child(6)>section:nth-child(3)>img{
-    padding-left: 3vw;
-    height: 36vh;
+
+#section05>div{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 9vw;
 }
 
 /*My Pojects..........*/
@@ -263,9 +263,6 @@ body>section:nth-child(9)>section:nth-child(2){
     display: flex;
     width: 60vw;
     background-color: #625D5D;
-}
-#nav01{
-    margin-left: 30vw;
 }
 .txtfeaild{
     position: relative;
@@ -385,6 +382,7 @@ footer>nav:nth-child(2)>ul {
 footer>nav:nth-child(3){
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 
 /*mobile size.........*/
