--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -97,14 +97,16 @@ body>section:nth-child(3)>img:nth-child(1){
     display: flex;
     justify-content: left;
 }
+body>section:nth-child(3)>section:nth-child(2)>pre:nth-child(1){
+    font-size: 1.5vw;
+}
 body>section:nth-child(3)>section:nth-child(2){
-    width: 70vw;
-    margin-left: 10vw;
+    width: 100vw;
 }
 body>section:nth-child(3)>section:nth-child(2)>img:nth-child(2){
     margin-left: 47vw;
     margin-top: -30vw;
-    display: flex;
+    display: none;
     justify-content: right;
 }
 body>section:nth-child(4)>div{
