--- a/css/myPortfolio.css
+++ b/css/myPortfolio.css
@@ -311,6 +311,7 @@ footer{
     position: relative;
     left: 0;
     right: 0;
+    width: 100vw;
     height: 20vw;
 }
 footer>div:nth-child(4)>small{
